--- a/pong/templates/menu/nav.html
+++ b/pong/templates/menu/nav.html
@@ -12,7 +12,7 @@
             {% endif %}
         </div>
         <div class="col-6">
-            <img class="float-end" id = "corner-logo" src="{% static 'img/logo_big.png' %}" alt="Logo Pong">
+            <img class="float-end" id = "corner-logo" src="{% static 'img/logo_big.png' %}" alt="Logo Pong"  draggable="false">
         </div>
     </div>
 </header>
