--- a/pong/static/styles/_buttons.scss
+++ b/pong/static/styles/_buttons.scss
@@ -119,7 +119,7 @@ $translate-03: translate(0.3em, -0.3em) skew(-10deg, 0deg);
 // Alterações que sobrepoem o menu-bt para botões verdes
 // usado no botão verde das análises
 .green-bt {
-  background-image: linear-gradient(to right, white, rgb(196, 255, 221), rgb(0, 187, 109),rgb(18, 144, 148));
+  background-image: linear-gradient(to right, white, rgb(196, 255, 221), rgb(0, 201, 117), rgb(0, 104, 75));
 
   &:hover{
       box-shadow: rgba(0, 255, 128, 0.5) -0.3em 0.3em .8em;
@@ -131,6 +131,27 @@ $translate-03: translate(0.3em, -0.3em) skew(-10deg, 0deg);
     box-shadow: rgba(0, 255, 128, 0.5) -0.3em 0.3em 2em;
   }
 }
+
+
+// menu-bt com estilo carregando
+@keyframes loading {
+  0%   {background-position: 10% 0%;}
+  100%  {background-position: 160% 0%;}
+}
+.loading-bt {
+  background-image: linear-gradient(to right, #c4ffff 3%, #0059ff 8%, #5f00cc 92%, #c4ffff 97%);
+  animation: loading;
+  animation-duration: 0.8s;
+  animation-iteration-count: infinite;
+  transition-timing-function:cubic-bezier(1, 0, 0, 1);
+  
+  &:hover {
+    color:  white;
+    }
+  transition-duration: 400ms;
+
+}
+
 
 // Classe que centraliza os ícones no centro do botão
 // No momento apenas em uso nos botões de retorno
