--- a/pong/templates/menu/index.html
+++ b/pong/templates/menu/index.html
@@ -19,7 +19,7 @@
             <a class="menu-bt green-bt" href = "{% url 'analises_menu' %}"><i class="fas fa-stream"></i> Análises</a>
             <a id="profile-menu-btn" class="menu-bt" href = "{% url 'profile' %}"><i class="fas fa-sign-in-alt"></i> Profile</a>
             <a id="login-menu-btn" class="menu-bt" href = "{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a>
-
+            <p>logged-in: {{logged}}</p>
         </div>
 </div>
 
