--- a/pong/templates/menu/notas.html
+++ b/pong/templates/menu/notas.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-    {% include 'menu/head.html'%}
+    {% include 'menu/head.html' %}
 
 <body class="container-fluid">
 
     <!--Barra de navegação para o voltar a página anterior + miniatura da logo-->
-    {% include 'menu/nav.html' with includeExplanation=False %}
+    {% include 'menu/nav.html' with backLink='analises_menu' %}
     
     <div class="container-fluid vertical-center">
         <div class="row justify-content-md-center container-fluid ">
