quase completa a pag do kayo

--- a/pong/templates/kayo/analise_kayo.html
+++ b/pong/templates/kayo/analise_kayo.html
@@ -53,7 +53,7 @@
 
       <div class="row justify-content-center">
           <div class="col-12 col-md-5 align-self-center">
-              <img class="img-fluid align-center" src="{% static 'img/grafico1_kayo.png'%}" alt="Grafico 1 kayo" draggable="false">
+              <img class="img-fluid align-center" src="{% static graf1 %}" alt="Grafico 1 kayo" draggable="false">
           </div>
       </div>
       <br>
@@ -93,7 +93,7 @@
 
       <div class="row justify-content-center">
           <div class="col-12 col-md-5 align-self-center">
-              <img class="img-fluid align-center" src="{% static 'img/grafico2_kayo.png'%}" alt="Grafico 1 kayo" draggable="false">
+              <img class="img-fluid align-center" src="{% static graf2 %}" alt="Grafico 2 kayo" draggable="false">
           </div>
       </div>
       <br>
@@ -112,7 +112,7 @@
 
     <div class="row justify-content-center">
       <div class="col-12 col-md-5 align-self-center">
-          <img class="img-fluid align-center" src="{% static 'img/grafico3_kayo.png'%}" alt="Grafico 1 kayo" draggable="false">
+          <img class="img-fluid align-center" src="{% static graf3 %}" alt="Grafico 3 kayo" draggable="false">
       </div>
   </div>
 
