--- a/pong/templates/menu/index.html
+++ b/pong/templates/menu/index.html
@@ -16,7 +16,9 @@
         <div class="col-12 col-md-5 menu-item-list align-self-center flex-column">
             <a class="menu-bt" href = "{% url 'modos' %}"><i class="fas fa-table-tennis"></i> Play Game</a>
             <a class="menu-bt" href = "{% url 'leaderboards' %}"><i class="fas fa-stream"></i> Leaderboard</a>
-            <a id="profile-menu-btn" class="menu-bt" href = "{% url 'profile' %}"><i class="fas fa-sign-in-alt"></i> Profile</a>
+            {% if logged %}
+                <a id="profile-menu-btn" class="menu-bt" href = "{% url 'profile' %}"><i class="fas fa-sign-in-alt"></i> Profile</a>
+            {% endif %}
             <a id="login-menu-btn" class="menu-bt" href = "{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a>
             <a class="menu-bt green-bt" href = "{% url 'analises_menu' %}"><i class="fas fa-stream"></i> Análises</a>
             <p>logged-in: {{logged}}</p>
