--- a/pong/templates/menu/profile.html
+++ b/pong/templates/menu/profile.html
@@ -17,7 +17,7 @@
 
         <div class = "row justify-content-center">
             <div class = "col-12 col-md-5">
-            <h1 > Lfzin </h1>
+            <h1 > {{nome}} </h1>
             </div>
 
             <div class="col-12 col-md-5">
@@ -53,7 +53,7 @@
                                 Vitórias:
                             </td>
                             <td>
-                                257
+                                {{ vitorias }}
                             </td>
                         </tr>
                         <tr>
@@ -66,7 +66,7 @@
                                     Nº de Partidas:
                             </td>
                             <td>
-                                342
+                                {{ partidas }}
                             </td>
                         </tr>
 
