add pagina do kayo top e add anotações

--- a/pong/templates/kayo/analise_kayo.html
+++ b/pong/templates/kayo/analise_kayo.html
@@ -6,7 +6,7 @@
 
 <body class="container-fluid">
     <!--Barra de navegação para o voltar a página anterior + miniatura da logo-->
-    {% include 'menu/nav.html' with backlink='menu/analises_menu' %}
+    {% include 'menu/nav.html' with backLink='analises_menu' %}
 
 <hr>
     <div class="row justify-content-center">
@@ -124,14 +124,6 @@
           os conjuntos. Dessa forma, concluí-se que pessoas de variadas idades podem e tem se divertido com a plataforma.
         </div>
       </div>
-
-    <br><hr>
-
-    <div class="row justify-content-center">
-        <br>
-        <div class="col-6">
-            *obs: Os códigos dos gráficos estão em funções na view.
-        </div>
     </div>
 
 </body>
