--- a/pong/templates/menu/notas.html
+++ b/pong/templates/menu/notas.html
@@ -15,8 +15,10 @@
             <div class="col-12 col-md-5 menu-item-list align-self-center flex-column">
                 <ul>
                     <li>Os dados utilizados foram gerados artificialmente utilizando Pandas e Numpy (e um pouco do
-                    suor do Kayo, pra escrever 200 nicks diferentes). </li>
+                        suor do Kayo, pra escrever 200 nicks diferentes). </li>
                     <li>O joguinho de Pong agora foi atualizado e agora está 231.7% mais divertido. </li>
+                    <li>É possível fazer login como qualquer um dos usuários e a página de perfil altera
+                        dinamicamente</li>
             </div>
         </div>
     </div>
