Adicionado Rank e tempo de jogo no profile

--- a/pong/templates/treuke/analise_treuke.html
+++ b/pong/templates/treuke/analise_treuke.html
@@ -32,7 +32,7 @@
             
             
                 <div>
-                    <p>Encontramos então a seleção de jogadores que mais perderam, o lider deles é curiosamente o jogador que também tem o maior numero de partidas... E ele perdeu todas... Pobre Patata414.</p>
+                    <p>Encontramos então a seleção de jogadores que mais perderam, o lider deles é curiosamente o jogador que também tem o maior numero de partidas... E ele perdeu todas... Pobre Patata414. (obs: Estão sendo desconsiderados os empates para as contagens pois eles não deveriam estar ocorrendo no jogo, uma partida vai para a prorrogação caso esteja empatado)</p>
                     <img class="img-plot" src="{% static fig_dist_derrotas %}" alt="Grafico de distribuicao de derrotas">
                 </div>
                 <div>
