Adicionando gráficos na view

--- a/pong/templates/laguardia/index.html
+++ b/pong/templates/laguardia/index.html
@@ -128,6 +128,10 @@
         outra parte abaixo da diagonal (rank 2 < rank 1) é expressivamente roxa (vitória 1). Um cenário como esse é especialmente
         interessante para a aplicação de algoritmos de machine learning - como, por exemplo, regressão logísitca - pois ele indica
         ser fácilmente previsível.
+        <br><br>
+        Em conclusão, percebemos através das análises que o rank do jogador tem grande correlação com sua idade e número de vitórias;
+        e que a diferença de rank dos jogadores em uma partida é de enorme peso para a previsão do resultado desta.
+        <br><br>
     </div>
     </div>
 </body>
