--- a/pong/templates/sanches/index.html
+++ b/pong/templates/sanches/index.html
@@ -105,7 +105,7 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-md-5 align-self-center">
-            <img class="img-fluid align-center" src="{% static 'img/sanches2.png'%}" alt="Grafico 2 sanches" draggable="false">
+            <img class="img-fluid align-center" src="{% static 'plots/sanches_fig_1.png'%}" alt="Grafico 2 sanches" draggable="false">
         </div>
     </div>
 
@@ -139,7 +139,7 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-md-5 align-self-center">
-            <img class="img-fluid align-center" src="{% static 'img/sanches1.png'%}" alt="Grafico 1 sanches" draggable="false">
+            <img class="img-fluid align-center" src="{% static 'plots/sanches_fig_2.png'%}" alt="Grafico 1 sanches" draggable="false">
         </div>
     </div>
     <div class="row justify-content-center">
