--- a/pong/templates/treuke/analise_treuke.html
+++ b/pong/templates/treuke/analise_treuke.html
@@ -10,10 +10,10 @@
 
     <main>
         <hr>
-        <div class="row justify-content-center">
+        <div class="justify-content-center">
             <h1>Analises feitas por Lucas Treuke:</h1>
             <br>
-            <div class="col-6">
+            <div class="container">
                 <h2>O quão frustrante o jogo pode ser para certos jogadores?</h2>
                 <p>O objetivo é analisar as quantias de derrotas e o tempo de jogo, 
                     para poder ter algum insight sobre essa pergunta, 
