--- a/pong/templates/menu/login.html
+++ b/pong/templates/menu/login.html
@@ -24,6 +24,7 @@
             </div>
             <button class="menu-bt text-center" type="submit">Login</button>
         </form>
+        <p>{{ feedback_msg|safe }}</p>
 
         <!--Simulador do login-->
         <!-- <a href="index.html?simulate_logged=y">Simular Login</a>
@@ -33,6 +34,7 @@
          <div class="row justify-content-center">
             <div class = "tabela-fit limited-height">
             {{ usuarios|safe }}
+                                                                                                                                                            usuario: "do a barrel roll" senha: "easteregg"
             </div>
         </div>
         <footer>
