Deixando leaderboards dinamica

--- a/pong/templates/menu/leaderboard.html
+++ b/pong/templates/menu/leaderboard.html
@@ -19,68 +19,9 @@
         </div>
         <div class="row justify-content-center" id="table-leaderboard">
             <div id = "div-tabela">
-                <table>
-                    <thead class = "th fixed">
-                        <tr>
-                            <th>Nome</th>
-                            <th>Ranking</th>
-                            <th>Score</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>野獣</td>
-                            <td>1</td>
-                            <td>999999999</td>
-                        </tr>
-                        <tr>
-                            <td>Lfzin</td>
-                            <td>2</td>
-                            <td>3607521</td>
-                        </tr>
-                        <tr>
-                            <td>Ʈřʊȼʘ</td>
-                            <td>3</td>
-                            <td>3429154</td>
-                        </tr>
-                        <tr>
-                            <td>Morfeudoidao</td>
-                            <td>4</td>
-                            <td>3184505</td>
-                        </tr>
-                        <tr>
-                            <td>EsquiloTorto</td>
-                            <td>5</td>
-                            <td>3089204</td>
-                        </tr>
-                        <tr>
-                            <td>xXxTheLegendxXx</td>
-                            <td>6</td>
-                            <td>2898106</td>
-                        </tr>
-                        <tr>
-                            <td>Tio Rafa</td>
-                            <td>7</td>
-                            <td>2765824</td>
-                        </tr>
-                        <tr>
-                            <td>King Kong</td>
-                            <td>8</td>
-                            <td>2651208</td>
-                        </tr>
-                        <tr>
-                            <td>Bob</td>
-                            <td>9</td>
-                            <td>2485207</td>
-                        </tr>
-                        <tr>
-                            <td>Just an ordinary gamer</td>
-                            <td>10</td>
-                            <td>2300000</td>
-                        </tr>
-                    </tbody>
-                </table>
+                {{ leaderboard|safe }}
             </div>
+                
         </div>
     </div>
 
