--- a/pong/templates/menu/profile.html
+++ b/pong/templates/menu/profile.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     
-{% include 'menu/head.html'%}
+{% include 'menu/head.html' with html_to_add='<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">' %}
 <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 
     <body class="container-fluid">
