--- a/pong/templates/sanches/index.html
+++ b/pong/templates/sanches/index.html
@@ -6,7 +6,7 @@
 
 <body class="container-fluid">
     <!--Barra de navegação para o voltar a página anterior + miniatura da logo-->
-    {% include 'menu/nav.html' with backlink='menu/analises_menu' %}
+    {% include 'menu/nav.html' with backLink='analises_menu' %}
 
 <hr>
     <div class="row justify-content-center">
