adicionado link para o jogo na explicação dos modos

--- a/pong/templates/menu/modos_explicacao.html
+++ b/pong/templates/menu/modos_explicacao.html
@@ -13,7 +13,7 @@
     <!--Explicação rápida dos modos de jogo + botões para procurar por uma sala-->
         <div class="row justify-content-center ">
             
-            <a class="final__gradient-button-1 col-2">
+            <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
                 <img class="icon-bt" src="{% static 'img/icon1.png'%}" alt="Icone modo de jogo 1">
             </a>
             <div class="col-10 col-lg-8 align-self-center">
@@ -29,7 +29,7 @@
 
         <div class="row justify-content-center flex-md-row-reverse">
             
-            <a class="final__gradient-button-1 col-2">
+            <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
                 <img class="icon-bt" src="{% static 'img/icon2.png'%}" alt="Icone modo de jogo 1">
             </a>
 
@@ -48,7 +48,7 @@
 
         <div class="row justify-content-center">
 
-            <a class="final__gradient-button-1 col-2">
+            <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
                 <img class="icon-bt" src="{% static 'img/icon3.png'%}" alt="Icone modo de jogo 1">
             </a>
             <div class="col-10 col-lg-8 align-self-center">
@@ -63,7 +63,7 @@
 
         <div class="row justify-content-center flex-md-row-reverse">
             
-            <a class="final__gradient-button-1 col-2">
+            <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
                 <img class="icon-bt" src="{% static 'img/icon4.png'%}" alt="Icone modo de jogo 1">
             </a>
             <div class="col-10 col-lg-8 align-self-center">
