--- a/pong/static/styles/style.css
+++ b/pong/static/styles/style.css
@@ -14,6 +14,9 @@ body {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  max-width: 100%;
+  overflow-x: auto;
+  margin-bottom: 20px;
 }
 
 .limited-height {
